...
                                <connections>
                                    <action selector="toggleOpensAtLogin:" target="-2" id="3mA-c3-HVf"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gOt-KN-83u">
                                <rect key="frame" x="106" y="103" width="231" height="18"/>
                                <buttonCell key="cell" type="check" title="Send crash data (requires restart)" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="YwH-Pc-MwX">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="toggleUploadCrashData:" target="-2" id="8a1-bO-6qu"/>
                                </connections>
...
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                            </button>
                            <button verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LCE-lg-IdY">
                                <rect key="frame" x="106" y="169" width="122" height="18"/>
                                <buttonCell key="cell" type="check" title="Show dock icon" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="1Ay-Q1-93j">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="toggleShowDockIcon:" target="-2" id="UvC-Pk-hFl"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="onk-bV-cOj">
                                <rect key="frame" x="106" y="147" width="126" height="18"/>
                                <buttonCell key="cell" type="check" title="Show menu icon" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="uNE-4I-dRd">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="toggleMenuDockIcon:" target="-2" id="Y4S-Ys-VCZ"/>
                                </connections>
                            </button>
                            <button translatesAutoresizingMaskIntoConstraints="NO" id="pYS-Wj-7iw">
                                <rect key="frame" x="106" y="125" width="202" height="18"/>
                                <buttonCell key="cell" type="check" title="Keep Console window on top" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="OSm-zw-Lk8">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="toggleKeepConsoleOnTop:" target="-2" id="bCp-5r-duV"/>
                                </connections>
...
