...
int hydra_focushydra(lua_State* L) {
    [NSApp activateIgnoringOtherApps:YES];
    return 0;
}

static hydradoc doc_hydra_alert = {
    "hydra", "alert", "alert(str, seconds = 2)",
    "Shows a message in large words briefly in the middle of the screen; does tostring() on its argument for convenience.."
};

int hydra_alert(lua_State* L) {
    size_t len;
    const char* str = luaL_tolstring(L, 1, &len);
...
