...
                <outlet property="outputView" destination="Jlb-eC-MmZ" id="euF-R1-iHK"/>
                <outlet property="window" destination="P23-aL-ez6" id="UH2-9R-WyE"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Hammerspoon Console" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="console" animationBehavior="default" id="P23-aL-ez6">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
            <rect key="contentRect" x="916" y="704" width="510" height="389"/>
            <rect key="screenRect" x="0.0" y="0.0" width="3200" height="1778"/>
            <value key="minSize" type="size" width="340" height="200"/>
...
